[package]
name = "uchardet"
version = "1.0.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Detect character encodings using uchardet library"
license = "Unlicense"

homepage = "https://github.com/emk/rust-uchardet"
documentation = "http://docs.rs/uchardet"
repository = "https://github.com/emk/rust-uchardet"
readme = "README.md"
keywords = ["encoding", "text", "i18n"]

[features]
# Allow access to unstable features when being built with a nightly compiler,
# to keep travis-cargo happy and enable access to benchmarks.
unstable = []

[dependencies]
libc = "*"
error-chain = "0.5"
uchardet-sys = { version = "1.0.0", path = "uchardet-sys" }

[workspace]
members = ["uchardet-sys"]
