[package]

name = "uchardet-sys"
version = "0.0.12"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Low-level, unsafe interface to uchardet encoding detector"
license = "Unlicense/MPL-1.1/MIT"

documentation = "http://www.rust-ci.org/emk/rust-uchardet/doc/uchardet-sys/"
repository = "https://github.com/emk/rust-uchardet"

links = "uchardet"
build = "build.rs"

[dependencies]
libc = "0.1"

[build-dependencies]
pkg-config = '*'
