[package]

name = "uchardet-sys"
version = "2.0.3"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Low-level, unsafe interface to uchardet encoding detector"
license = "Unlicense/MPL-1.1/MIT"

documentation = "http://emk.github.io/rust-uchardet/uchardet_sys/index.html"
repository = "https://github.com/emk/rust-uchardet"

links = "uchardet"
build = "build.rs"

[badges]
maintenance = { status = "deprecated" }

[dependencies]
libc = "0.2.17"

[build-dependencies]
pkg-config = "0.3.8"
cmake = "0.1.18"
